--- a/example/polyboot_example.html
+++ b/example/polyboot_example.html
@@ -7,7 +7,7 @@
 <title>Sample app</title>
 <link rel="stylesheet" href="packages/bootjack/css/bootstrap.min.css">
 
-<link rel="import" href="../lib/bootstrap/dropdown.html">
+<link rel="import" href="packages/polyboot/bootstrap/dropdown.html">
 <script src="packages/browser/dart.js"></script>
 </head>
 <body>
@@ -29,6 +29,6 @@
 		<div class="tab-pane" id="settings">(Setting Content)</div>
 	</div>
 
-	<script type="application/dart" src="pollyboot_example.dart"></script>
+	<script type="application/dart" src="polyboot_example.dart"></script>
 </body>
 </html>
