--- a/lib/bootstrap/dropdown.html
+++ b/lib/bootstrap/dropdown.html
@@ -4,8 +4,16 @@
 		<button class="btn btn-default dropdown-toggle" data-toggle="dropdown" >{{label}} <span class="caret"></span>
 		</button>
 		<ul class="dropdown-menu">
-	    <template repeat="{{option in options | enumerate}}"> 
-		   <li data-item-index="{{option.index}}"><a href="#" ><span class="glyphicon {{option.value.glyph}}">&nbsp;{{option.value.label}}</span></a></li>
+	    <template repeat="{{option in options | enumerate}}">
+	     <template if="{{option.value.type == 'item'}}"> 
+		    <li data-item-index="{{option.index}}"><a href="#" ><span class="glyphicon {{option.value.glyph}}">&nbsp;{{option.value.label}}</span></a></li>
+		   </template>
+		   <template if="{{option.value.type == 'divider'}}"> 
+        <li class="divider"></li>
+       </template>
+       <template if="{{option.value.type == 'header'}}"> 
+        <li class="dropdown-header">{{option.value.label}}</li>
+       </template>
 		  </template>
 		</ul>
 	</div>
