--- a/example/polyboot_example.html
+++ b/example/polyboot_example.html
@@ -22,7 +22,7 @@
 
 	<div class="tab-content">
 		<div class="tab-pane active" id="dropdownTab">
-		  <bs-dropdown id="optionsDrowDown" label="Options"></bs-dropdown>
+		  <bs-dropdown id="optionsDrowDown" buttonLabel=""></bs-dropdown>
 		</div>
 		<div class="tab-pane " id="home">(Home Content)</div>
 		<div class="tab-pane" id="messages">(Message Content)</div>
